
* GITHUB#13332: Improve MissingDoclet linter to check records correctly. (Uwe Schindler)

* GITHUB#13499: Remove usage of TopScoreDocCollector + TopFieldCollector deprecated methods (#create, #createSharedManager) (Jakub Slowinski)

Build
---------------------

* GITHUB#13649: Fix eclipse ide settings generation #13649 (Uwe Schindler, Dawid Weiss)

======================== Lucene 9.12.0 =======================

API Changes
---------------------

* GITHUB#13469: Expose FlatVectorsFormat as a first-class format; can be configured using a custom Codec. (Michael Sokolov)

* GITHUB#13612: Hunspell: add Suggester#proceedPastRep to avoid losing relevant suggestions. (Peter Gromov)

* GITHUB#13603: Introduced `IndexSearcher#searchLeaf(LeafReaderContext, Weight, Collector)` protected method to
  facilitate customizing per-leaf behavior of search without requiring to override
  `search(LeafReaderContext[], Weight, Collector)` which requires overriding the entire loop across the leaves (Luca Cavanna)

* GITHUB#13559: Add BitSet#nextSetBit(int, int) to get the index of the first set bit in range. (Egor Potemkin)

* GITHUB#13568: Add DoubleValuesSource#toSortableLongDoubleValuesSource and
  MultiDoubleValuesSource#toSortableMultiLongValuesSource methods. (Shradha Shankar)

* GITHUB#13568: Add CollectorOwner class that wraps CollectorManager, and handles list of Collectors and results.
  Add IndexSearcher#search method that takes CollectorOwner. (Egor Potemkin)

* GITHUB#13568: Add DrillSideways#search method that supports any collector types for any drill-sideways dimensions
  or drill-down. (Egor Potemkin)

New Features
---------------------

* GITHUB#13430: Allow configuring the search concurrency via
  TieredMergePolicy#setTargetSearchConcurrency. This in-turn instructs the
  merge policy to try to have at least this number of segments on the highest
  tier. (Adrien Grand, Carlos Delgado)

* GITHUB#13517: Allow configuring the search concurrency on LogDocMergePolicy