@@ -30,7 +30,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest ]
-        java-version: [ '22' ]
+        java-version: [ '23-ea' ]
         uses-alt-java: [ true, false ]
 
     runs-on: ${{ matrix.os }}
@@ -61,7 +61,16 @@ jobs:
           # https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#setting-an-environment-variable
           echo "RUNTIME_JAVA_HOME=${{ env.ALT_JAVA_DIR }}" >> "$GITHUB_ENV"
 
-      - run: ./gradlew -p lucene/core check -x test
+      - name: ./gradlew tidy
+        run: |
+          ./gradlew tidy
+          if [ ! -z "$(git status --porcelain)" ]; then
+          echo ":warning: **tidy left local checkout in modified state**" >> $GITHUB_STEP_SUMMARY
+          echo '```' >> $GITHUB_STEP_SUMMARY
+          git status --porcelain >> $GITHUB_STEP_SUMMARY
+          echo '```' >> $GITHUB_STEP_SUMMARY
+          git reset --hard && git clean -xfd .
+          fi
 
       - name: ./gradlew regenerate
         run: |
@@ -69,7 +78,7 @@ jobs:
           sudo apt-get install libwww-perl
           ./gradlew regenerate -x generateUAX29URLEmailTokenizerInternal --rerun-tasks
           if [ ! -z "$(git status --porcelain)" ]; then 
-            echo ":warning: **regenerateleft local checkout in modified state**" >> $GITHUB_STEP_SUMMARY 
+            echo ":warning: **regenerate left local checkout in modified state**" >> $GITHUB_STEP_SUMMARY 
             echo '```' >> $GITHUB_STEP_SUMMARY
             git status --porcelain >> $GITHUB_STEP_SUMMARY
             echo '```' >> $GITHUB_STEP_SUMMARY
@@ -79,8 +88,7 @@ jobs:
       - run: ./gradlew testOpts
       - run: ./gradlew helpWorkflow
       - run: ./gradlew licenses updateLicenses
-      - run: ./gradlew tidy
-      - run: ./gradlew check -x test
+      - run: ./gradlew check -x test -Pvalidation.git.failOnModified=false
       - run: ./gradlew assembleRelease mavenToLocal
 
       # Conserve resources: only run these in non-alt-java mode.
