@@ -60,8 +60,8 @@ public class WrapperDownloader {
 
   public static void checkVersion() {
     int major = Runtime.version().feature();
-    if (major != 21 && major != 22) {
-      throw new IllegalStateException("java version must be 21 or 22, your version: " + major);
+    if (major != 21 && major != 22 && major != 23) {
+      throw new IllegalStateException("java version must be 21, 22 or 23, your version: " + major);
     }
   }
 
