@@ -266,6 +266,8 @@ Build
 
 * GITHUB#13649: Fix eclipse ide settings generation #13649 (Uwe Schindler, Dawid Weiss)
 
+* GITHUB#13698: Upgrade to gradle 8.10 (Dawid Weiss)
+
 ======================== Lucene 9.12.0 =======================
 
 API Changes
